--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@
    <div><a href=""> <img class="peliculas" src="img/cartel8.webp" alt=""></a></div>
    <div><a href=""> <img class="peliculas" src="img/cartel9.webp" alt=""></a></div>
    <div><a href=""> <img class="peliculas" src="img/cartel10.webp" alt=""></a></div>
+    <div><a href=""> <img class="peliculas" src="img/cartel1.webp" alt=""></a></div>
+   <div><a href=""> <img class="peliculas" src="img/cartel2.webp" alt=""></a></div>
+   <div><a href=""> <img class="peliculas" src="img/cartel3.webp" alt=""></a></div>
+   <div><a href=""> <img class="peliculas" src="img/cartel4.webp" alt=""></a></div>
+   <div><a href=""> <img class="peliculas" src="img/cartel5.webp" alt=""></a></div>
+   <div><a href=""> <img class="peliculas" src="img/cartel6.webp" alt=""></a></div>    
+       
    </div>
 
 <div class="conteinerboton">
