--- a/registrarse2.html
+++ b/registrarse2.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="utf-8">
+
+<head>
 <title>Registrarse</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 <link rel="stylesheet" href="registrarse2.css">
-
+</head>
 <header>
 
 </header>
@@ -14,7 +16,7 @@
 
  <div id="conteiner">
       <form>
-          <legend class="registro">Registro</legend>
+          <legend class=" registro">Registro</legend>
           <div class="mb-3">
                 <input type="text" id="disabledTextInput" class="form-control" placeholder=Nombre>
           </div>
@@ -26,9 +28,10 @@
           <div class="mb-3">
              <input type="text" id="disabledTextInput" class="form-control" placeholder="E-mail">
           </div>
+          <input type="date" placeholder="Fecha de Nacimiento (día/mes/año)" name="nacimiento" id="nacimientoInput"  required="">
           
           <div class="mb-3">
-            <select id="disabledSelect" class="form-select">
+            <select id="disabledSelect" class=" form-select">
                 <option>Pais</option>
                 <option>Argentina</option> 
                 <option>Brasil</option> 
@@ -44,15 +47,14 @@
           <div class="mb-3">
             <div class="form-check">
               <input class="form-check-input" type="checkbox" id="disabledFieldsetCheck" disabled>
-              <label class="form-check-label" for="disabledFieldsetCheck">Acepto terminos y condiciones
-              </label>
+               <label for="disabledFieldsetCheck">Acepto terminos y condiciones</label>
             </div>
           </div>
-         
-          <div class="d-grid gap-2 col-6 mx-auto">
-            <button class="btn btn-primary" type="button">Registrarse</button>
-                  Necesitas ayuda?
+     <div>
+            <button class="btn-primary" type="button">Registrarse</button>
+            <div>    <a href="#" class="item">Necesitas ayuda?</a> 
           </div>
+        </div>
         </form>
 
  </div>
