--- a/indexproyectointegrador.html
+++ b/indexproyectointegrador.html
@@ -32,7 +32,8 @@
        
         <a class="boton" href="">Tendencias</a>
         <a class="boton" href="registrarse2.html">Registrarse</a>
-        <a  class=" boton iniciosesion" href="">Iniciar Sesion</a>
+        <a  class=" boton iniciosesion" href="Iniciosesion.html">Iniciar Sesion</a>
+        <a class="boton" href="indexapi.html">API</a>
     </nav>
 
     </header>
